@startuml
hide circle
skinparam classAttributeIconSize 0

class BillController {
    - _billRepository: IBillRepository
    + CreateBill(CreateBillRequestDTO request): Task<IActionResult>
}

interface IBillRepository<<interface>> {
    + CreateBill(CreateBillRequestDTO request): Task<BillResponseDTO>
}

class BillRepository {
    - _billDao: BillDAO
    + CreateBill(CreateBillRequestDTO request): Task<BillResponseDTO>
}

class BillDAO {
    - _client: Client
    + CreateBill(CreateBillRequestDTO request): Task<BillResponseDTO>
}

class Bill {
    + Id: Guid
    + ReservationId: Guid
    + TotalAmount: decimal
    + ReceivedAmount: decimal
    + ChangeAmount: decimal
    + TableId: Guid
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + CustomerId: Guid
    + ShopId: Guid
}

BillController -- IBillRepository
IBillRepository <|.. BillRepository
BillRepository -- BillDAO
BillDAO -- Bill

@enduml
